--- a/ProjectOne/Views/Home/About.cshtml
+++ b/ProjectOne/Views/Home/About.cshtml
@@ -4,6 +4,7 @@
 <h1>@ViewBag.Title</h1>
 <h2>@ViewBag.Message</h2>
 
+<p>Hello</p>
 
 <h4><u>The Discipline</u></h4>
 <p>Computer-based information systems have become a critical part of the products, services, operations, and management of all organizations. 
