--- a/ProjectOne/Views/Home/SelectedDegree.cshtml
+++ b/ProjectOne/Views/Home/SelectedDegree.cshtml
@@ -49,11 +49,13 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">Close&times;</button> <h3 class="modal-title">Leave a reply:</h3>
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
+                    
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal-->
@@ -76,6 +78,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -105,6 +108,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -137,6 +141,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -173,6 +178,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -200,6 +206,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -234,6 +241,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -266,6 +274,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -292,6 +301,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -318,6 +328,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -346,6 +357,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -373,6 +385,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
@@ -399,6 +412,7 @@
                     </div>
                     <div class="modal-body">
                         <input type="text" name="reply" id="reply" placeholder="Your Reply">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
