--- a/ProjectOne/Views/Home/Index.cshtml
+++ b/ProjectOne/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Information Systems Management</h1>
-    <p class="lead">Welcome, prospective Information Systesm students</p>
+    <p class="lead">Solving business problems with tech-oriented solutions.</p>
     <p><a href="https://marriottschool.byu.edu/bsis/" class="btn btn-primary btn-lg">BYU IS Website &raquo;</a></p>
     <p><a href="https://catalog.byu.edu/management/information-systems/information-systems-bs-0" class="btn btn-primary btn-lg">Program Prequisites and Requirements &raquo;</a></p>
 </div>
