Added a new folder
In the new folder I included all the instructions necessary

--- a/ProjectOne/Views/Home/Index.cshtml
+++ b/ProjectOne/Views/Home/Index.cshtml
@@ -4,10 +4,22 @@
 
 <div class="jumbotron">
     <h1>Information Systems Management</h1>
-    <p class="lead">Solving business problems with tech-oriented solutions.</p>
+    <h3>Everyone likes to have career options...few programs will give you more than a bachelor of information systems.<br /></h3>
+    <p><ul>
+    <li>
+        Study in two worlds - business and technology - and learn to help them work together. Learn how to design, develop,
+        implement, manage, and advise on information technology systems and processes.
+    </li>
+    <li>
+        Begin a career that the U.S. Department of Labor predicts will, "grow faster than the average for all occupations
+        through 2016"
+    </li>
+</ul></p>
     <p><a href="https://marriottschool.byu.edu/bsis/" class="btn btn-primary btn-lg">BYU IS Website &raquo;</a></p>
     <p><a href="https://catalog.byu.edu/management/information-systems/information-systems-bs-0" class="btn btn-primary btn-lg">Program Prequisites and Requirements &raquo;</a></p>
 </div>
+
+
 
 <div class="row">
     <div class="col-md-4">
