--- a/ProjectOne/Views/Shared/_Layout.cshtml
+++ b/ProjectOne/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/MyStyle.css")
+    <link href="MyStyle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body >
