Some more comments
Comments

--- a/ProjectOne/Views/Home/About.cshtml
+++ b/ProjectOne/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h1>@ViewBag.Title</h1>
 <h2>@ViewBag.Message</h2>
 
-
+<!--The following h4 tags outline main topics under the About page, and the p tags go in detail about those topics.-->
 <h4><u>The Discipline</u></h4>
 <p>Computer-based information systems have become a critical part of the products, services, operations, and management of all organizations. 
     The effective and efficient use of information and communications technologies is an important element in achieving competitive advantage 
@@ -27,10 +27,10 @@
      The variety of employment prospects includes opportunities for everyone from those who are primarily interested in people and organizations to those 
     who enjoy very technical activities such as database and network administration or software development. <br /><br /></p>
 
-
+<!--This allows the user to go to a website and view all the courses offered in IS-->
 <p> To view and learn more about all Information Systems courses offered at BYU, click the button below <br />
     <a href="https://catalog.byu.edu/course-list/1,IS" class="btn btn-primary btn-lg">IS Courses &raquo;</a> <br /></p>
 
-
+<!--This allows the user to go to a website and view all the faculity in the IS program-->
 <p> To view a list of all the Information Systems professors, click the button below. <br />
     <a href="https://catalog.byu.edu/faculty-list/information-systems" class="btn btn-primary btn-lg">IS Faculty &raquo;</a></p>
