--- a/ProjectOne/Views/Home/Index.cshtml
+++ b/ProjectOne/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
+<!--My main jumbotron on my home page-->
 <div class="jumbotron">
     <h1>Information Systems Management</h1>
     <h3>Everyone likes to have career options...few programs will give you more than a bachelor of information systems.<br /></h3>
@@ -20,7 +21,7 @@
 </div>
 
 
-
+<!--Contains brief descriptions about all the areas on my website-->
 <div class="row">
     <div class="col-md-4">
         <h2>About</h2>
