--- a/ProjectOne/Views/Home/Login.cshtml
+++ b/ProjectOne/Views/Home/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model ProjectOne.Models.Users
+
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,27 +7,39 @@
 
 <h2>Login</h2>
 
-<div class="container">
-
-    <!--created new view for personalizing login-->
-    @using (Html.BeginForm("Login", "Home", FormMethod.Post))
-    {
-        <div class="row">
-            <label for="inputEmail">Email address</label>
-            @Html.TextBox("Email address")
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Users</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <br />
-        <br />
-        <div class="row">
-            <label for="inputPassword">Password</label>
-            @Html.Password("Password")
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
         </div>
-        <button type="submit">Login</button>
-        <br />
-        <p>
-            @Html.ActionLink("Register as a new user", "Register", "Home")
-        </p>
 
-    }
 
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Log In" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
 </div>
