--- a/ProjectOne/Views/Home/SelectedDegree.cshtml
+++ b/ProjectOne/Views/Home/SelectedDegree.cshtml
@@ -46,51 +46,10 @@
 <h4><u>How do I apply?</u></h4>
 <p>To apply, please complete the online application found at https://marriottschool.byu.edu/apply/bsis/. </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup1">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup1" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">Close&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                    
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 <h4><u><br />Other than grades, what goes into the application?</u></h4>
 <p>In addition to grades, the application requires a current resume, as well as a 500-word essay.</p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup2">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup2" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 <h4><u><br />May I apply concurrently to the information systems program or accounting program and the management program?</u></h4>
 <p>
@@ -101,26 +60,6 @@
     information.
 </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup3">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup3" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 <h4><u><br />What are the prerequisites for the Information Systems junior core?</u></h4>
 <p>
@@ -134,26 +73,7 @@
     IS 201 and IS 303 (CS 142) require a grade of B or better.<br />
 
 </p>
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup4">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup4" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
+
 
 
 <h4><u><br />What generals will be covered with prerequisite classes?</u></h4>
@@ -171,54 +91,12 @@
     If possible, it is helpful to have these courses complete before entering the junior core.
 </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup5">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup5" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
-
 
 <h4><u><br />Can I take all of the prerequisite classes in the same semester?</u></h4>
 <p>
     It is possible to take all of the prerequisite classes in one semester, though it is strongly discouraged due to the extensive
     time and effort required for each course.
 </p>
-
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup6">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup6" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 
 <h4><u><br />What factors should I consider in deciding to retake a prerequisite class?</u></h4>
@@ -234,26 +112,7 @@
     </ul>
 </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup7">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup7" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
+
 
 
 <h4>
@@ -267,26 +126,7 @@
     Be diligent in checking online for seats to become available. You may also contact the academic advisor in 789 TNRB to ask permission to be added
     to the class.
 </p>
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup8">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup8" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
+
 
 <h4><u><br />What should I do if I want to do an internship during a fall/winter semester? Is there a way to defer?</u></h4>
 <p>
@@ -294,26 +134,7 @@
     at https://marriottschool.byu.edu/forms/advisement/undgrd. Aside from a deferment, once accepted into the Marriott School, you
     must be enrolled in a three-credit hour class for every semester that you are in the program (excluding spring/summer terms).
 </p>
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup9">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup9" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
+
 
 
 <h4><u><br />How can I receive academic credit for completing an internship?</u></h4>  
@@ -321,26 +142,6 @@
     for doing an internship. Students who are already in the program should take BUS M 496R for internship credit. Internships must be approved
      for credit by the Marriott School Internship Office in 460 TNRB. Please visit https://marriottschool.byu.edu/internships for further information.</p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup10">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup10" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 <h4><u><br />What transfer classes count?</u></h4>
 <p>
@@ -350,26 +151,6 @@
     to msm_transfer@byu.edu
 </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup11">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup11" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 
 <h4><u><br />What do I need to do if I want to declare a minor either in business or another subject?</u></h4>
@@ -378,26 +159,6 @@
     filled out and signed, take the form to the College Advisement Center of your primary major.
 </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup12">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup12" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 <h4><u><br />What do I do if I want to double major?</u></h4>
 <p>
@@ -405,46 +166,16 @@
     Please complete a Double Major form in the Marriott School Advisement Center (460 TNRB).
 </p>
 
-<div class="container">
-    <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".demo-popup13">Reply</button>
-        <!-- popup box modal starts here -->
-        <div class="modal fade demo-popup13" tabindex="-2" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> <h3 class="modal-title">Leave a reply:</h3>
-                    </div>
-                    <div class="modal-body">
-                        <input type="text" name="reply" id="reply" placeholder="Your Reply">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    </div>
-                </div><!-- /.modal-content -->
-            </div><!-- /.modal-dialog -->
-        </div><!-- /.modal-->
-        <!-- popup box modal ends -->
-    </div> <!-- /.row -->
-</div> <!-- /.container -->
 
 <br />
 
 <!--This allows the user to submit a question or a comment-->
-<h4><u>Feel free to submit a question or comment below:</u></h4>
-<form id="myForm">
+<h4><u>Feel free to submit a question, answer a question, or view all questions asked:</u></h4>
+@Html.ActionLink("Submit a Question", "Create", "DegreeQuestions") <br />
+@Html.ActionLink("View/Answer a Question", "Index", "DegreeQuestions") <br />
 
-    First name:<br>
-    <input type="text" name="firstname" value=""><br>
 
-    Last name:<br>
-    <input type="text" name="lastname" value=""><br>
 
-    Email:<br />
-    <input type="text" name="email" value="" /><br />
-
-    Question/Comment:<br />
-    <input type="text" name="question" value="" /><br /><br />
-    <input type="submit" onclick="clearForm()" value="Submit">
-</form>
 
 <script>
 function clearForm() {
@@ -465,7 +196,6 @@ function clearForm() {
     </button>
     <ul class="dropdown-menu">
         <li>@Html.ActionLink("BSIS", "SelectedDegree", "Home", new { degree = "BSIS" }, null)</li>
-        <li>@Html.ActionLink("MISM", "SelectedDegree", "Home", new { degree = "MISM" }, null)</li>
 
     </ul>
 </div>
