--- a/ProjectOne/Views/Home/Login.cshtml
+++ b/ProjectOne/Views/Home/Login.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Password("password", "", new { id = "password", Textmode = "Password" })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -40,6 +40,9 @@
     </div>
 }
 
+<br />
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <p>
+        @Html.ActionLink("Register as a new user", "Register")
+    </p>
 </div>
