--- a/ProjectOne/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ProjectOne/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ProjectOne.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
+<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
 <h4>Use another service to log in.</h4>
 <hr />
 @{
