--- a/ProjectOne/Views/DegreeQuestions/Details.cshtml
+++ b/ProjectOne/Views/DegreeQuestions/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model ProjectOne.Models.DegreeQuestions
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+
+@model ProjectOne.Models.DegreeQuestions
 
 @{
     ViewBag.Title = "Details";
