--- a/ProjectOne/Views/Home/Contact.cshtml
+++ b/ProjectOne/Views/Home/Contact.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+
+@{
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
