--- a/ProjectOne/Views/Manage/ManageLogins.cshtml
+++ b/ProjectOne/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProjectOne.Models.ManageLoginsViewModel
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+@model ProjectOne.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
