--- a/ProjectOne/Views/Shared/_Layout.cshtml
+++ b/ProjectOne/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
