--- a/ProjectOne/Views/Home/Degrees.cshtml
+++ b/ProjectOne/Views/Home/Degrees.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
 @{
     ViewBag.Title = "Degrees";
     Layout = "~/Views/Shared/_Layout.cshtml";
