--- a/ProjectOne/Views/Home/Login.cshtml
+++ b/ProjectOne/Views/Home/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProjectOne.Models.Users
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+@model ProjectOne.Models.Users
 
 @{
     ViewBag.Title = "Login";
