--- a/ProjectOne/Views/Manage/AddPhoneNumber.cshtml
+++ b/ProjectOne/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProjectOne.Models.AddPhoneNumberViewModel
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+@model ProjectOne.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
