--- a/ProjectOne/Views/Manage/Index.cshtml
+++ b/ProjectOne/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProjectOne.Models.IndexViewModel
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+@model ProjectOne.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
