--- a/ProjectOne/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/ProjectOne/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProjectOne.Models.VerifyPhoneNumberViewModel
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+@model ProjectOne.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
