--- a/ProjectOne/Views/_ViewStart.cshtml
+++ b/ProjectOne/Views/_ViewStart.cshtml
@@ -1,3 +1,4 @@
-﻿@{
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
